--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,15 @@ p {
     margin: 10px 0;
 }
 
+/* Utility classes */
+.container {
+    margin: auto;
+    max-width: 1100px;
+    overflow: auto;
+    padding: 0 20px;
+}
+
+
 /* Navbar */
 #navbar {
     background: #333;
@@ -58,7 +67,8 @@ p {
      text-align: center;  /*just making sure */
 }
 
-#navbar ul li a:hover {
+#navbar ul li a:hover, 
+#navbar ul li a.current /* this will by default show dark value in home */ {
     background: #444;
     color: #f7c08a;
 }
