--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,10 @@ p {
     margin: 10px 0;
 }
 
-/* Utility classes */
+/* Utility classes 
+utility clasees are just classes that will be use through out the site
+they are not speciific to any specific area
+*/
 .container {
     margin: auto;
     max-width: 1100px;
@@ -32,6 +35,13 @@ p {
     padding: 0 20px;
 }
 
+.text-primary {
+    color: #f7c08a;
+}
+
+.lead {
+    font-size: 20px;
+}
 
 /* Navbar */
 #navbar {
@@ -71,4 +81,22 @@ p {
 #navbar ul li a.current /* this will by default show dark value in home */ {
     background: #444;
     color: #f7c08a;
+}
+
+/* Showcase */
+#showcase {
+    background: url('../img/showcase.jpg') no-repeat center center/cover;
+    height: 600px;
+}
+
+#showcase .showcase-content {
+    color: #fff;
+    text-align: center;
+    padding-top: 170px;
+}
+
+#showcase .showcase-content h1 {
+    font-size: 60px;
+    line-height: 1.2em;
+    
 }
