--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,19 @@ they are not speciific to any specific area
     color: #333;
 }
 
+.bg-dark {
+    background: #333;
+    color: #fff;
+}
+.bg-light {
+    background: #f4f4f4;
+    color: #333;
+}
+.bg-primary {
+    background: #333;
+    color: #f7c08a;
+}
+
 /* Navbar */
 #navbar {
     background: #333;
@@ -137,4 +150,13 @@ they are not speciific to any specific area
     width: 50%;
     background: url('../img/photo-1.jpg') no-repeat;
     min-height: 100%;
+}
+
+#home-info .info-content {
+    float: right;
+    width: 50%;
+    height: 100%;
+    text-align: center;
+    padding: 50px 30px;
+    overflow: hidden;
 }
