--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,35 @@ they are not speciific to any specific area
     border-radius: 50%;
 
 }
+
+/* COntact form */
+#contact-form .form-group {
+    margin-bottom: 20px;
+
+}
+
+#contact-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+#contact-form input,
+#contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px #ddd solid;
+}
+
+#contact-form textarea {
+    height: 200px;
+}
+
+#contact-form input:focus,
+#contact-form textarea:focus {
+    outline: none;
+    border-color: #f7c08a;
+}
+
 /* Footer */
 #main-footer {
     text-align: center;
