--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,3 +11,15 @@
     padding: 5px;
     border-bottom: #444 dotted 1px;
 }
+
+/* Home Info */
+#home-info .info-img {
+    display: none;
+    height: 550px;
+
+}
+
+#home-info .info-content {
+    float: none;
+    width: 100%;
+}
