added responsiveness to about.html

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -29,3 +29,15 @@
     float: none;
     width: 100%;
 }
+
+/* About Info */
+#about-info .info-right, #about-info .info-left {
+    float: none;
+    width: 100%;
+}
+#about-info .info-right {
+    margin-top: 30px;
+}
+.l-heading {
+    text-align: center;
+}
