--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ they are not speciific to any specific area
 
 .l-heading {
     font-size: 40px;
+    line-height: 1.2;
 }
 
 /* Padding */
@@ -215,7 +216,7 @@ they are not speciific to any specific area
 
 /* Testimonials */
 #testimonials {
-    height: 600px;
+    height: 100%;
     background: url('../img/test-bg.jpg') no-repeat center center/cover;
     padding: 100px;
 }
